<resources>
    <string name="app_name">AutoCare</string>
    <string name="btn_addFill_up">Add Fill-Up</string>
    <string name="btn_summery">Fuel Efficiency</string>
    <string name="tv_disp_date">Date</string>
    <string name="tv_disp_date2">2021/08/01</string>
    <string name="tv_disp_litters">Litters</string>
    <string name="tv_disp_litters2">20 l</string>
    <string name="tv_disp_price">Price</string>
    <string name="tv_disp_price2">Rs.2000</string>
    <string name="btn_editEntry">Edit Entry</string>
    <string name="tv_disp_date5">2021/08/10</string>
    <string name="tv_disp_litters3">40 l</string>
    <string name="tv_disp_price4">Rs. 5000</string>
    <string name="btn_deleteEntry">Delete Entry</string>
    <string name="tv_add_date">Date</string>
    <string name="btn_set_date">Set Date</string>
    <string name="tv_add_quentity">Quantity</string>
    <string name="et_add_quentity">Liters</string>
    <string name="tv_add_price">Price</string>
    <string name="et_add_price">Rs .</string>
    <string name="tv_add_meter">Odometer</string>
    <string name="et_add_meter">km</string>
    <string name="btn_add_entry">Add Entry</string>
    <string name="tv_total_cost">Total Cost (Rs.)</string>
    <string name="tv_fuel_qty">Fuel Qty (litres)</string>
    <string name="tv_fuel_efficiency">Fuel (km per litre)</string>
    <string name="tv_total_cost_ans">Rs.15000</string>
    <string name="tv_fuel_qty_ans">20.0</string>
    <string name="tv_fuel_efficiency_ans">12.3 km per liter</string>
    <string name="tv_edit_date">Date</string>
    <string name="btn_set_date_edit">Edit Date</string>
    <string name="tv_edit_quentity">Edit Fuel Qty</string>
    <string name="et_edit_quentity">40 Liters</string>
    <string name="tv_edit_price">Edit Price</string>
    <string name="et_edit_price">Rs.5000</string>
    <string name="tv_edit_meter">Edit Odometer</string>
    <string name="et_edit_meter">42500 km</string>
    <string name="btn_edit_entry">Edit Entry</string>
    <string name="ll_Vehicles">Vehicles</string>
    <string name="ll_Reminder">Reminder</string>
    <string name="ll_service">Service</string>
    <string name="btn_View_cost_details">Details</string>
    <string name="tv_select_month">Month</string>
    <string name="tv_show_month">Month</string>
    <string name="tv_display_month">August</string>
    <string name="tv_display_date">Date</string>
    <string name="tv_display_cost">Cost</string>
    <string name="tv_date1">2021/08/01</string>
    <string name="tv_cost1">Rs. 2000</string>
    <string name="tv_date2">2021/08/06</string>
    <string name="tv_cost2">Rs. 3000</string>
    <string name="tv_travel_distance">Traveled Distance (km)</string>
    <string name="tv_travel_distance_ans">1850 km</string>


    <string name="txt_entmile">Milage</string>

    <string name="btn_ad">Add</string>
    <string name="btn_upd">Update</string>
    <string name="btn_dlt">Delete</string>
    <string name="pic1">TODO</string>
    <string name="txt_4">Add details</string>
    <string name="txt_5">carname</string>
    <string name="txt_6">S.Date</string>
    <string name="txt_7">S.Milage</string>
    <string name="et_n" />
    <string name="et_d" />
    <string name="et_mi" />
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="btn_navi">Reminders</string>
    <string name="txt_12" />
    <string name="txt_13" />
    <string name="txt_14" />
    <string name="btn_add">Add</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="PIC">pic</string>
    <string name="txt_20">Reminders</string>
    <string name="txt_21">"Reminder"</string>
    <string name="txt_22" />
    <string name="txt_23" />
    <string name="btn_plus">Add</string>
    <string name="btn_x">Update</string>
    <string name="btn_y">Delete</string>
    <string name="txt_31">Update details</string>
    <string name="txt_32">reminder1</string>
    <string name="btn_up1">update</string>
    <string name="txt_33">Reminder2</string>
    <string name="btn_up2">update</string>
    <string name="txt_34">Reminder3</string>
    <string name="btn_up3">update</string>
    <string name="btn_save" />
    <string name="btn_save1">Save</string>
    <string name="txt_41">Delete reminders</string>
    <string name="txt_42">Reminder1</string>
    <string name="btn_dlt10">Delete</string>
    <string name="txt_43">Reminder 2</string>
    <string name="up_here">Update here</string>
    <string name="et_upd10" />
    <string name="btn_upd10">Update</string>
    <string name="et_upd20" />
    <string name="txt_51">Update details here</string>
    <string name="et_upd50" />
    <string name="btn_upd50">Update</string>
    <string name="et_l" />
    <string name="btn_dlt20">Delete</string>
    <string name="txt_511">"Update "</string>
    <string name="tv_123">Reminder2</string>
    <string name="tv_124">Reminder3</string>


    <string name="addbutton">ad_btn</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="title_activity_addvehicaldetail">ScrollingActivity</string>

    <string name="action_settings">Settings</string>

    <string name="addimage">Add Image</string>
    <string name="model2">Vehicle Name</string>
    <string name="makeyear2">Make year</string>
    <string name="fueltype">Fuel Type</string>
    <string name="model" />
    <string name="makeyear" />
    <string name="licenceno" />
    <string name="insuarance" />
    <string name="milage" />
    <string name="transmission" />
    <string name="notes" />
    <string name="modeltest">Model</string>
    <string name="modelvalue">SMG-1075</string>
    <string name="modelvalueview">SMG-1050</string>
    <string name="makeyearview">2011</string>
    <string name="makeyearviwe">Make Year</string>
    <string name="makeyearview2">2011</string>
    <string name="fueltypeview">Fuel Type</string>
    <string name="fueltypeview2">Petrol</string>
    <string name="licencenoview">License No.</string>
    <string name="licencenoview2">BVV-3412</string>
    <string name="insuarancenoview">Insuarance No</string>
    <string name="insuarancenoview2">Ceylan-105678456</string>
    <string name="noteview">Note</string>
    <string name="Noteview2">Car. This car I buy in 2014</string>
    <string name="Editvehicledetailbtn">Edit Details</string>
    <string name="deletedetailsbtn">Delete</string>
    <string name="editmodel">Model</string>
    <string name="editmodel2">SMG-1050</string>
    <string name="editmakeyear">Make Year</string>
    <string name="editmakeyear2">2011</string>
    <string name="editfueltype">Fuel Type</string>
    <string name="editfueltype2">Petrol</string>
    <string name="editlicenseno">License No.</string>
    <string name="editlysenseno2">Ceylinco-1234864</string>
    <string name="editinsuaranceno">Insuarance No</string>
    <string name="editinsuranceno2">Ceylan-1058456</string>
    <string name="editnote">Note</string>
    <string name="editnote2">car.This car I buy in 2014</string>
    <string name="btn_saveeditdetails">"Save "</string>
    <string name="dailyearning">Daily Earning</string>
    <string name="selectvehicle">Select Vehicle</string>
    <string name="selectweek">Select Week</string>
    <string name="savedailyearning">SAVE</string>
    <string name="calculatetotalearningbtn">Calculate Total Earning Of Week</string>

    <string name="service_textView">Service</string>
    <string name="ServiceName_textView">Service Name</string>
    <string name="serviceDate_textView">Service Date</string>
    <string name="serviceDescription_textView">Service Description</string>
    <string name="update_btn">Update</string>
    <string name="delete_btn">Delete</string>
    <string name="newService_btn">Add New</string>
    <string name="serviceDate_text">Service Date</string>
    <string name="serviceKM_textView">Present Meter</string>
    <string name="nextService_textView">Next Service On</string>
    <string name="serviceKM_text">2350</string>
    <string name="serviceDescription_text">Description</string>
    <string name="nextService_text">4850</string>
    <string name="done_btn">Done</string>
    <string name="addServiceTopic_textView">Add Service Details</string>
    <string name="viewServiceTopic_textView">Service Details</string>
    <string name="addedParts_textView">Added Parts</string>
    <string name="tv_total">Total Cost for the Service</string>
    <string name="et_set_fill_date">Year/Month/Day</string>
    <string name="btn_delete_entry">Delete Entry</string>
    <string name="tv_fillUp_select_vehicle">Please Select Vehicle</string>
    <string name="btn_fill_up_select">Next</string>
    <string name="tv_fill_up_select_vehicle">Vehicle Model</string>
    <string name="tv_fill_UP_display_model">Vehicle Model</string>
    <string name="fill_up_input_empty">Please Fill this input field</string>
    <string name="fill_up_input_quantity">Enter Quantity between 1 to 99</string>
    <string name="fill_up_input_price">Price can be between 1 to 99999</string>

    <string name="Earning_input_empty">Enter Daily Earning</string>

    <string name="btn_setalert">Alert</string>
    <string name="btn_alert45">Alert DO</string>
    <string name="invalid_name">Please enter name</string>
    <string name="invalid_date">Please enter date</string>
    <string name="invalid_mileage">Please enter mileage</string>
	<string name="service_input_empty">Cannot submit with empty fields</string>





</resources>