<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Fill_Up">

    <include
        android:id="@+id/include3"
        layout="@layout/toolbar2"></include>

    <TextView
        android:id="@+id/tv_add_date"
        android:layout_width="52dp"
        android:layout_height="33dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="56dp"
        android:text="@string/tv_add_date"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3" />

    <Button
        android:id="@+id/btn_set_date"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:text="@string/btn_set_date"
        app:backgroundTint="@color/button_color"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_add_date"
        app:layout_constraintStart_toEndOf="@+id/tv_add_date" />

    <TextView
        android:id="@+id/tv_add_quentity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_add_quentity"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_date" />

    <EditText
        android:id="@+id/et_add_quentity"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:hint="@string/et_add_quentity"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_add_quentity"
        app:layout_constraintStart_toEndOf="@+id/tv_add_quentity" />

    <TextView
        android:id="@+id/tv_add_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_add_price"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_quentity" />

    <EditText
        android:id="@+id/et_add_price"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:hint="@string/et_add_price"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_add_price"
        app:layout_constraintStart_toEndOf="@+id/tv_add_price"/>

    <TextView
        android:id="@+id/tv_add_meter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_add_meter"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_price" />

    <EditText
        android:id="@+id/et_add_meter"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:hint="@string/et_add_meter"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_add_meter"
        app:layout_constraintStart_toEndOf="@+id/tv_add_meter" />

    <Button
        android:id="@+id/btn_add_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/btn_add_entry"
        app:backgroundTint="@color/button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_meter" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="329dp"
        android:layout_height="231dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_entry"
        app:srcCompat="@drawable/vehicle1" />

</androidx.constraintlayout.widget.ConstraintLayout>