<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fill_Up_Update"
    android:background="@drawable/fill_up_grandiant_background">

    <include
        android:id="@+id/include5"
        layout="@layout/toolbar2"></include>

    <TextView
        android:id="@+id/tv_edit_date"
        android:layout_width="54dp"
        android:layout_height="41dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="76dp"
        android:text="@string/tv_edit_date"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include5" />

    <TextView
        android:id="@+id/tv_edit_quentity"
        android:layout_width="136dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:text="@string/tv_edit_quentity"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_date" />

    <EditText
        android:id="@+id/et_edit_quentity"
        android:layout_width="135dp"
        android:layout_height="51dp"
        android:layout_marginStart="56dp"
        android:ems="10"
        android:hint="@string/et_edit_quentity"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_edit_quentity"
        app:layout_constraintStart_toEndOf="@+id/tv_edit_quentity" />

    <TextView
        android:id="@+id/tv_edit_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="60dp"
        android:text="@string/tv_edit_price"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_quentity" />

    <EditText
        android:id="@+id/et_edit_price"
        android:layout_width="140dp"
        android:layout_height="49dp"
        android:layout_marginStart="52dp"
        android:ems="10"
        android:hint="@string/et_edit_price"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_edit_price"
        app:layout_constraintStart_toEndOf="@+id/tv_edit_price" />

    <TextView
        android:id="@+id/tv_edit_meter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/tv_edit_meter"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_price" />

    <EditText
        android:id="@+id/et_edit_meter"
        android:layout_width="131dp"
        android:layout_height="51dp"
        android:layout_marginStart="60dp"
        android:ems="10"
        android:hint="@string/et_edit_meter"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_edit_meter"
        app:layout_constraintStart_toEndOf="@+id/tv_edit_meter" />

    <Button
        android:id="@+id/btn_update_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/btn_edit_entry"
        app:backgroundTint="@color/button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_meter" />

    <EditText
        android:id="@+id/et_edit_date"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_edit_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@+id/tv_edit_date" />

    <Button
        android:id="@+id/btn_delete_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/btn_delete_entry"
        app:backgroundTint="@color/button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_update_entry" />


</androidx.constraintlayout.widget.ConstraintLayout>